# app/Http/Controllers/API/CustomerController.php
@@ -15,16 +15,14 @@ class CustomerController extends Controller{
     /**
      * @OA\Get(
      *   path="/api/customers",
-     *   operationId="getListCustomer",
+     *   operationId="index",
      *   tags={"Customer"},
-     *   security={
-     *    {"passport": {}},
-     *   },
+     *   security={{"bearer":{}}},
      *   summary="Mendapatkan Daftar Customer",
      *   description="Menampilkan semua daftar customer",
      *   @OA\Response(
      *      response=200,
-     *      description="Successful operation",        
+     *      description="Successful Operation",        
      *      @OA\MediaType(
      *          mediaType="application/json",
      *      )
@@ -42,11 +40,6 @@ class CustomerController extends Controller{
      *      description="not found"
      *   )
      * )
-     */
-    /**
-     * Display a listing of the resource.
-     *
-     * @return \Illuminate\Http\Response
      */
     public function index(Request $request){
         if(Gate::allows('isAdmin')){
@@ -84,61 +77,82 @@ class CustomerController extends Controller{
 
     /**
      * @OA\Post(
-     * path="/api/customers",
-     * operationId="Register",
-     * tags={"Customer"},
-     * security={
-     *   {"passport": {}},
-     * },
-     * summary="Simpan Data Customer",
-     * description="Menyimpan data customer",
-     *     @OA\RequestBody(
-     *         @OA\JsonContent(),
-     *         @OA\MediaType(
-     *            mediaType="multipart/form-data",
-     *            @OA\Schema(
-     *               type="object",
-     *               required={"nama","nomor_telepon", "email", "provinsi_id", "kota_id", "kecamatan_id"},
-     *               @OA\Property(property="nama", type="string"),
-     *               @OA\Property(property="nomor_telepon", type="string"),
-     *               @OA\Property(property="email", type="string"),
-     *               @OA\Property(property="alamat", type="text")
-     *               @OA\Property(property="provinsi_id", type="string")
-     *               @OA\Property(property="kota_id", type="string")
-     *               @OA\Property(property="kecamatan_id", type="string")
-     *            ),
-     *         ),
+     *  path="/api/customers",
+     *  operationId="store",
+     *  tags={"Customer"},
+     *  security={{"bearer":{}}},
+     *  summary="Simpan Data Customer",
+     *  description="Menyimpan data customer",
+     *  @OA\RequestBody(
+     *      description="Data Customer",
+     *      required=true,
+     *      @OA\MediaType(
+     *          mediaType="multipart/form-data",
+     *          @OA\Schema(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="nama",
+     *                  description="Nama Customer",
+     *                  type="string",
+     *                  example="Dummy Customer"
+     *              ),
+     *              @OA\Property(
+     *                  property="nomor_telepon",
+     *                  description="Nomor Telepon Customer",
+     *                  type="string"
+     *              ),
+     *              @OA\Property(
+     *                  property="email",
+     *                  description="Email Customer",
+     *                  type="string"
+     *              ),
+     *              @OA\Property(
+     *                  property="alamat",
+     *                  description="Alamat Customer", 
+     *                  type="text"
+     *              ),
+     *              @OA\Property(
+     *                  property="provinsi_id",
+     *                  description="id provinsi dari Alamat Customer",  
+     *                  type="string",
+     *                  example="P07"
+     *              ),
+     *              @OA\Property(
+     *                  property="kota_id",
+     *                  description="id kota atau kabupaten dari Alamat Customer",  
+     *                  type="string",
+     *                  example="K00007"
+     *              ),
+     *              @OA\Property(
+     *                  property="kecamatan_id",
+     *                  description="id kecamatan dari Alamat Customer", 
+     *                  type="string",
+     *                  example="D00001932"
+     *              ),
+     *              required={"nama","nomor_telepon", "email", "provinsi_id", "kota_id", "kecamatan_id"},
+     *          ),
      *      ),
-     *      @OA\Response(
-     *          response=200,
-     *          description="Stored Successfully",
-     *          @OA\MediaType(
-     *           mediaType="application/json",
-     *          )
-     *      ),
-     *      @OA\Response(
-     *          response=401,
-     *          description="Unauthenticated",
-     *      ),
-     *      @OA\Response(
-     *          response=422,
-     *          description="Unprocessable Entity",
-     *      ),
-     *      @OA\Response(
-     *          response=400, 
-     *          description="Bad request"
-     *      ),
-     *      @OA\Response(
-     *          response=404, 
-     *          description="Resource Not Found"
+     * ),
+     * @OA\Response(
+     *      response=200,
+     *      description="Stored Successfully",
+     *      @OA\MediaType(
+     *          mediaType="application/json",
      *      )
+     * ),
+     * @OA\Response(
+     *      response=400, 
+     *      description="Invalid Input"
+     * ),
+     * @OA\Response(
+     *      response=401,
+     *      description="Unauthenticated",
+     * ),
+     * @OA\Response(
+     *      response=422,
+     *      description="Unprocessable Entity",
      * )
-     */
-    /**
-     * Store a newly created resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
+     * )
      */
     public function store(StoreCustomerRequest $request){
 
@@ -158,58 +172,223 @@ class CustomerController extends Controller{
     }
 
     /**
-     * Display the specified resource.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @OA\GET(
+     *   path="/api/customers/{customer}",
+     *   operationId="show",
+     *   tags={"Customer"},
+     *   security={{"bearer":{}}},
+     *   summary="Mendapatkan detail Customer",
+     *   description="Menampilkan detail data Customer",
+     *   @OA\Parameter(
+     *       name="customer",
+     *       in="path",
+     *       required=true,
+     *       description="id customer",
+     *       @OA\Schema(
+     *           type="integer"
+     *       )
+     *   ),
+     *   @OA\Response(
+     *       response=200,
+     *       description="Successful Operation",
+     *       @OA\MediaType(
+     *           mediaType="application/json",
+     *       )
+     *   ),
+     *   @OA\Response(
+     *       response=401,
+     *       description="Unauthenticated",
+     *   ),
+     *   @OA\Response(
+     *      response=403,
+     *      description="Forbidden"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   )
+     * )
      */
     public function show(Customer $customer){
         if (is_null($customer)) {
-            return $this->sendError('Data tidak ditemukan');
+            return response()->json([
+                'success' => false, 
+                'message' => 'Data tidak ditemukan'
+            ], 404);
         }
 
         $response = Gate::inspect('view', $customer);
         if ($response->allowed()){
-            return $this->sendResponse(new CustomerResource($customer), 'Berhasil mengambil data customer');
+            return response()->json([
+                'success' => true,
+                'status_code' => Response::HTTP_OK,
+                'data' => new CustomerResource($customer),
+                'message' => 'Berhasil mengambil data customer'
+            ]);
         }else{
-            return $this->sendError('Data tidak ditemukan');
+            return response()->json([
+                'success' => false, 
+                'message' => 'Data tidak ditemukan'
+            ], 404);
         }
     }
 
     /**
-     * Update the specified resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @OA\Put(
+     *  path="/api/customers/{customer}",
+     *  operationId="update",
+     *  tags={"Customer"},
+     *  security={{"bearer":{}}},
+     *  summary="Edit Data Customer",
+     *  description="Mengedit data customer",
+     *  @OA\Parameter(
+     *      name="customer",
+     *      in="path",
+     *      description="id customer",
+     *      required=true,
+     *      @OA\Schema(
+     *          type="integer"
+     *      )
+     *  ),
+     *  @OA\RequestBody(
+     *      description="Update Data Customer",
+     *      required=true,
+     *      @OA\MediaType(
+     *          mediaType="application/x-www-form-urlencoded",
+     *          @OA\Schema(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="nama",
+     *                  description="Nama Customer",
+     *                  type="string",
+     *                  example="Dummy Update Customer"
+     *              ),
+     *              @OA\Property(
+     *                  property="nomor_telepon",
+     *                  description="Nomor Telepon Customer",
+     *                  type="string"
+     *              ),
+     *              @OA\Property(
+     *                  property="email",
+     *                  description="Email Customer",
+     *                  type="string"
+     *              ),
+     *              @OA\Property(
+     *                  property="alamat",
+     *                  description="Alamat Customer", 
+     *                  type="text"
+     *              ),
+     *              @OA\Property(
+     *                  property="provinsi_id",
+     *                  description="id provinsi dari Alamat Customer",  
+     *                  type="string",
+     *                  example="P10"
+     *              ),
+     *              @OA\Property(
+     *                  property="kota_id",
+     *                  description="id kota atau kabupaten dari Alamat Customer",  
+     *                  type="string",
+     *                  example="K00379"
+     *              ),
+     *              @OA\Property(
+     *                  property="kecamatan_id",
+     *                  description="id kecamatan dari Alamat Customer", 
+     *                  type="string",
+     *                  example="D00001820"
+     *              ),
+     *              required={"nama","nomor_telepon", "email", "provinsi_id", "kota_id", "kecamatan_id"},
+     *          ),
+     *      ),
+     * ),
+     * @OA\Response(
+     *      response=200,
+     *      description="Updated Successfully",
+     *      @OA\MediaType(
+     *          mediaType="application/json",
+     *      )
+     * ),
+     * @OA\Response(
+     *      response=400, 
+     *      description="Invalid Input"
+     * ),
+     * @OA\Response(
+     *      response=401,
+     *      description="Unauthenticated",
+     * ),
+     * @OA\Response(
+     *      response=422,
+     *      description="Unprocessable Entity",
+     * )
+     * )
      */
     public function update(StoreCustomerRequest $request, Customer $customer){
 
-        $customer->nama_pelanggan = $request->nama;
-        $customer->nomor_telepon = $request->nomor_telepon;
-        $customer->email = $request->email;
-        $customer->alamat = $request->alamat;
-        $customer->provinsi_id = $request->provinsi_id;
-        $customer->kota_id = $request->kota_id;
-        $customer->kecamatan_id = $request->kecamatan_id;
-        $customer->save();
+        $validatedData = $request->safe()->merge([
+            'nama_pelanggan' => $request->nama,
+            'alamat' => $request->alamat
+        ]);
 
-        return $this->sendResponse(new CustomerResource($customer), 'Berhasil mengubah data customer');
+        $customer->update($validatedData->all());
+        return response()->json([
+            'success' => true,
+            'status_code' => Response::HTTP_OK,
+            'data' => new CustomerResource($customer),
+            'message' => 'Berhasil mengubah data customer'
+        ]);
     }
 
     /**
-     * Remove the specified resource from storage.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @OA\Delete(
+     *   path="/api/customers/{customer}",
+     *   operationId="destroy",
+     *   tags={"Customer"},
+     *   security={{"bearer":{}}},
+     *   summary="Hapus Customer",
+     *   description="Menghapus Data Customer",
+     *   @OA\Parameter(
+     *      name="customer",
+     *      in="path",
+     *      description="id customer yang akan dihapus",
+     *      required=true,
+     *      @OA\Schema(
+     *          type="integer"
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=200,
+     *      description="Deleted Successfully",
+     *      @OA\MediaType(
+     *          mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Invalid id customer"
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *      description="Unauthenticated",
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="Not found"
+     *   )
+     * )
      */
     public function destroy(Customer $customer){
         $response = Gate::inspect('delete', $customer);
         if ($response->allowed()) {
             $customer->delete();
-            return $this->sendResponse([], 'Berhasil menghapus data customer');
+            return response()->json([
+                'success' => true,
+                'status_code' => Response::HTTP_OK,
+                'message' => 'Berhasil menghapus data customer'
+            ]);
         }else{
-           return $this->sendError('Data tidak ditemukan'); 
+            return response()->json([
+                'success' => false, 
+                'message' => 'Data tidak ditemukan'
+            ], 404); 
         }
     }
 }
